# bfqcircuits

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.md  README.md  pyproject.toml
docs/: build.ps1  conf.py  index.rst  requirements.txt
docs/examples/: Fluxonium.ipynb  Fluxonium_LCAO.ipynb  ResonatorFluxonium.ipynb  ResonatorTLS.ipynb  ResonatorTransmon.ipynb  Transmon.ipynb  index.rst
src/bfqcircuits/: __init__.py
src/bfqcircuits/core/: __init__.py  fit_fluxonium.py  fluxonium.py  fluxonium_LCAO.py  resonator_TLS.py  resonator_fluxonium.py  resonator_transmon.py  transmon.py
src/bfqcircuits/utils/: __init__.py  resonator_atom.py  special.py
